fixed the footer getting squashed.

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -104,8 +104,8 @@ body {
 
 /* Set the fixed height of the footer here */
 #footer {
+  padding-top: 20px !important;
   height: 60px;
-  background-color: #f5f5f5;
 }
 
 @import 'bootstrap';
